# sdpfuzz2

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.agents/: AGENTS.md
.github/workflows/: ci.yml
corpus/: corpus.db
docs/: architecture.md  changelog.md  contributing.md  extending_strategies.md  kali_setup_runbook.md  log_schema.md  sdp_protocol_specifics.md  troubleshooting.md
openspec/changes/cli-menu-workflow/: design.md  proposal.md  tasks.md
openspec/changes/corpus-management/: design.md  proposal.md  tasks.md
openspec/changes/gui-simplification/: design.md  proposal.md  tasks.md
openspec/changes/sdpfuzz2-implementation/: design.md  proposal.md  tasks.md
scripts/: check_dependency_vulns.py
src/sdpfuzz2/: __init__.py  cli.py  config.py
src/sdpfuzz2/bluetooth/: __init__.py  (+5 more)
tests/: conftest.py
tests/contract/: test_crash_detection_contract.py  test_probe_contract.py  test_strategy_contract_placeholder.py
tests/integration/: test_crash_detection_integration.py  test_discovery_integration.py  test_e2e_workflow.py  test_probe_integration.py  test_runner_integration.py  test_strategy_async_concurrency.py  test_transport_placeholder.py
tests/unit/: test_cli.py  test_cli_corpus.py  test_cli_fuzz.py  test_concurrency.py  test_corpus_manager.py  test_crash_detector.py  test_discovery.py  test_domain_models.py  test_l2cap_transport.py  test_logging_schema.py  test_packet_builder.py  test_phase3_coverage.py  test_replay.py  test_run_logger.py  test_runner.py  test_scaffold_modules.py  test_sdp_phase2.py  test_strategy_properties.py
(+40 files in other folders)
