[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sdpfuzz2"
version = "0.1.0"
description = "Bluetooth SDP fuzzer for malformed packet testing"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "SDPFuzz2 Contributors" }]
dependencies = [
  "typer>=0.12,<1.0",
  "rich>=13.7,<14.0",
  "pydantic>=2.8,<3.0",
  "anyio>=4.4,<5.0",
  "dbus-next>=0.2.3,<1.0; platform_system == 'Linux'",
]

[project.optional-dependencies]
bluetooth-lab = [
  "scapy>=2.5,<3.0",
]

dev = [
  "pytest>=8.2,<9.0",
  "pytest-cov>=5.0,<6.0",
  "hypothesis>=6.112,<7.0",
  "ruff>=0.6.0,<1.0",
  "mypy>=1.11,<2.0",
]

[project.scripts]
sdpfuzz2 = "sdpfuzz2.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers --strict-config --cov=sdpfuzz2 --cov-report=term-missing --cov-fail-under=90"
testpaths = ["tests"]
markers = [
  "integration: marks tests requiring Linux/Kali runtime dependencies",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
show_error_codes = true
pretty = true
mypy_path = "src"
packages = ["sdpfuzz2"]
